--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -37,7 +37,7 @@ parameters:
         - '/Method Sylius\\Bundle\\(Admin|Shop)Bundle\\Twig\\Component\\[a-zA-Z\\]+\:\:getDataModelValue\(\) is unused./'
         - '/Method Sylius\\Component\\(\w+)\\Model\\(\w+)\:\:getId\(\) has no return type specified./'
         - '/Unable to resolve the template type T in call to method Doctrine\\Persistence\\ObjectManager\:\:getRepository\(\)/' # Doctrine's ObjectManager is not generic-aware
-        - '/Trait Sylius\\Bundle\\CoreBundle\\Application\\SyliusPluginTrait is used zero times and is not analysed\./'
+        - '/Trait Sylius\\Bundle\\CoreBundle\\Application\\SyliusPluginTrait is used zero times and is not analysed\./' # Exposed for plugins' usage
         # Intentional overrides
         - '/PHPDoc type string of property Sylius\\Bundle\\PayumBundle\\Request\\GetStatus\:\:\$status is not covariant with PHPDoc type int of overridden property Payum\\Core\\Request\\BaseGetStatus\:\:\$status\./'
         - '/Method Sylius\\Bundle\\UserBundle\\Controller\\UserController\:\:getUser\(\) overrides @final method Sylius\\Bundle\\ResourceBundle\\Controller\\ResourceController\:\:getUser\(\)\./'
